--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>V's Korean resto</title>
 	
-	<link rel="stylesheet" href="E:\USERS\HP\Desktop\WEBSITE\style.css" >	
+	<link rel="stylesheet" href="style.css" >	
 	<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
